--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -125,6 +125,9 @@ body {
             background-color: white;
             font-size: 1rem;
             letter-spacing: 1.5px;
+            a {
+              text-align: center;
+            }
           }
         }
       }
